--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<meta http-equiv="refresh" content="0; URL="http://kbroaders.github.io/dist/index.html/" />
+		<meta http-equiv="refresh" content="0; url=http://kbroaders.github.io/dist/index.html" />
 	</head>
 	<body>
 		This page should redirect.
