Added redirect information

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<meta http-equiv="refresh" content="0; url=http://kbroaders.github.io/dist/index.html" />
 	</head>
 	<body>
-		This page should redirect.
+		<h3>This page should redirect. If it doesn't, click the <a href="http://kbroaders.github.io/dist/index.html">link</a>.
+		</hr>
 	</body>
 </html>
